ReadableStreamDefaultController::enqueue should check for worker terminated exception https://bugs.webkit.org/show_bug.cgi?id=210485

Reviewed by Mark Lam.

Make sure to not assert in case of enqueue exception if we are in a terminating worker.
This is covered by WPT fetch/api/basic/stream-response.any.worker.html and fetch/api/basic/stream-safe-creation.any.worker.html.

* bindings/js/ReadableStreamDefaultController.h:
(WebCore::ReadableStreamDefaultController::enqueue):


Canonical link: https://commits.webkit.org/223394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260100 268f45cc-cd09-0410-ab3c-d52691b4dbfc